hoan thanh PM KCB